--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        Odin Recipes
+    </h1>
+    <a href = "./recipes/lasagna.html">Lasagna</a>
 </body>
 </html>
