--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src = "https://static01.nyt.com/images/2023/08/31/multimedia/RS-Lasagna-hkjl/RS-Lasagna-hkjl-superJumbo.jpg" alt="Lasagna image">
+    <h3>Description</h3>
+    <p>Pasta then tomato then pasta then tomato</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pasta</li>
+        <li>Tomato</li>
+        <li>Salt</li>
+    </ul>
+    <ol>
+        <li>Soak pasta in water</li>
+        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis repellat eligendi, eveniet libero at ducimus ab nisi accusantium quae necessitatibus ullam error nihil veniam, modi quibusdam unde sapiente sit sed?</li>
+        <li>Finished!</li>
+    </ol>
 </body>
 </html>
