--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src = "https://static01.nyt.com/images/2023/08/31/multimedia/RS-Lasagna-hkjl/RS-Lasagna-hkjl-superJumbo.jpg" alt="Lasagna image">
+    <img src = "https://static01.nyt.com/images/2023/08/31/multimedia/RS-Lasagna-hkjl/RS-Lasagna-hkjl-superJumbo.jpg" alt="Lasagna image" height = "500" width = "500">
     <h3>Description</h3>
     <p>Pasta then tomato then pasta then tomato</p>
     <h2>Ingredients</h2>
