--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <h1>
         Odin Recipes
     </h1>
-    <a href = "./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href = "./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/rissotto.html">Risotto</a></li>
+        <li><a href="./recipes/steak.html">Steak</a></li>
+    </ul>
+    
 </body>
 </html>
