added css and modified classes

--- a/recipes/rissotto.html
+++ b/recipes/rissotto.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/home/torazo/repos/TOD-recipeweb/style.css">
 </head>
 <body>
-    <h1>Risotto</h1>
+    <h1 class="title recipe">Risotto</h1>
     <img src = "https://tryingtobeahappyhuman.files.wordpress.com/2020/04/20200401_124842.jpg?w=1400" height="500" width="600">
     <h2>Ingredients</h2>
     <ul>
-        <li>item</li>
-        <li>more items</li>
+        <li class="list recipe">item</li>
+        <li class="list recipe">more items</li>
     </ul>
     <ol>
-        <li>step1</li>
-        <li>more steps</li>
+        <li class="list recipe">step1</li>
+        <li class="list recipe">more steps</li>
     </ol>
 </body>
 </html>
