--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
+    <h1 class="title">
         Odin Recipes
     </h1>
     <ul>
-        <li><a href = "./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/rissotto.html">Risotto</a></li>
-        <li><a href="./recipes/steak.html">Steak</a></li>
+        <li><a href = "./recipes/lasagna.html" class="list">Lasagna</a></li>
+        <li><a href="./recipes/rissotto.html" class="list">Risotto</a></li>
+        <li><a href="./recipes/steak.html" class="list">Steak</a></li>
     </ul>
     
 </body>
