--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/home/torazo/repos/TOD-recipeweb/style.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="title recipe">Lasagna</h1>
     <img src = "https://static01.nyt.com/images/2023/08/31/multimedia/RS-Lasagna-hkjl/RS-Lasagna-hkjl-superJumbo.jpg" alt="Lasagna image" height = "500" width = "500">
-    <h3>Description</h3>
+    <h2>Description</h3>
     <p>Pasta then tomato then pasta then tomato</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Pasta</li>
-        <li>Tomato</li>
-        <li>Salt</li>
+        <li class="list recipe">Pasta</li>
+        <li class="list recipe">Tomato</li>
+        <li class="list recipe">Salt</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Soak pasta in water</li>
-        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis repellat eligendi, eveniet libero at ducimus ab nisi accusantium quae necessitatibus ullam error nihil veniam, modi quibusdam unde sapiente sit sed?</li>
-        <li>Finished!</li>
+        <li class="list recipe">Soak pasta in water</li>
+        <li class="list recipe">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis repellat eligendi, eveniet libero at ducimus ab nisi accusantium quae necessitatibus ullam error nihil veniam, modi quibusdam unde sapiente sit sed?</li>
+        <li class="list recipe">Finished!</li>
     </ol>
 </body>
 </html>
