--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/home/torazo/repos/TOD-recipeweb/style.css">
 </head>
 <body>
-    <h1>Steak</h1>
+    <h1 class="title recipe">Steak</h1>
     <img src = "https://img-global.cpcdn.com/recipes/0a7d1619a86bdf96/1200x630cq70/photo.jpg" alt = "Well done steak" height = 500 width = 600>
     <h2>Description</h2>
     <p>steak steak steak steak eat the steak witj fork fork fork</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>steak</li>
-        <li>salt</li>
-        <li>pepper</li>
+        <li class="list recipe">steak</li>
+        <li class="list recipe">salt</li>
+        <li class="list recipe">pepper</li>
     </ul>
     <h2>Steps:</h2>
     <ul>
-        <li>season your steak</li>
-        <li>burn</li>
+        <li class="list recipe">season your steak</li>
+        <li class="list recipe">burn</li>
     </ul>
 </body>
 </html>
